nobase_include_HEADERS = \
	ust/marker.h \
	ust/tracepoint.h \
	ust/tracepoint-event.h \
	ust/lttng-tracepoint-event.h \
	ust/lttng-tracepoint-event-reset.h \
	ust/lttng-events.h \
	ust/lttng-ust-ctl.h \
	ust/version.h \
	ust/lttng-ust-abi.h \
	ust/ringbuffer-abi.h \
	ust/lttng-tracer.h \
	ust/usterr-signal-safe.h \
	ust/config.h \
	ust/share.h \
	ust/ust.h \
	ust/core.h

# note: usterr-signal-safe.h, core.h and share.h need namespace cleanup.

noinst_HEADERS = \
	lttng-ust-comm.h \
	usterr.h \
	ust_snprintf.h \
	ust/compat.h \
	ust/marker-internal.h \
	ust/tracepoint-internal.h \
	ust/clock.h \
	ust/probe-internal.h \
	ust/kcompat/kcompat.h \
	ust/kcompat/jhash.h \
	ust/kcompat/compiler.h \
	ust/kcompat/types.h \
	ust/stringify.h \
	ust/wait.h \
	ust/ringbuffer-config.h \
	ust/processor.h
